[package]
name = "spec_proj_quic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.10.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rustls = { version = "0.21.0", default-features = false, features = ["quic"], optional = true }
rcgen = "0.12.0"

[dev-dependencies]
anyhow = "1.0.22"
crc = "3"
bencher = "0.1.5"
directories-next = "2"
rand = "0.8"
rcgen = "0.12.0"
rustls-pemfile = "1.0.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
url = "2"